Remove type boolean
QuickBasic does not have a boolean type. Removing type boolean also
means removing statement defbool and constants true and false.